mychart/templates/istio-virualservice.yaml
# Istio VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: usermgmt-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: usermgmt-restapp
        port:
          number: 8080
